# scapy

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  makefile  pyproject.toml  setup.py  test_commands.md  tox.ini
.github/workflows/: check.yaml  pre-commit.yaml  pre-merge.yaml  test.yaml
docs/: CONTRIBUTING.md  cli.rst  conf.py  index.rst  reference.rst  requirements.txt
examples/: deploy.sh
examples/data/: index.js  root_ca.crt
scapy/: __init__.py  __main__.py  __version__.py  arguments.py  worker.py
scapy/cli/: __init__.py  app.py  delpoy.py  download.py  install.py  paths.py  settings.py  utils.py
scapy/cli/generator/: __init__.py  password.py  worker.py
scapy/cli/paths/: __init__.py  certificates.py  configs.py  passwords.py  secrets.py
scapy/core/: __init__.py  worker.py
tests/: __init__.py  test_worker.py
