[tool.poetry]
authors = ["Nikhil John <nikhiljohn1010@gmail.com>"]
description = "Step CA Manager using Python"
license = "MIT"
name = "scapy"
version = "0.3.3"

[tool.poetry.dependencies]
click = "^8.0.1"
cloudflare-api = "^2.0.4"
python = "^3.8"
click-completion = "^0.5.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
twine = "^3.4.2"
black = "^21.9b0"
Sphinx = "^4.2.0"
recommonmark = "^0.7.1"
sphinx-autodoc-typehints = "^1.12.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-click = "^3.0.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.black]
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.vscode
    | _build
    | buck-out
    | build
    | dist
    | tests
  )/
)
'''
include = '\.pyi?$'
line-length = 79
target-version = ['py38', 'py39']

[tool.poetry.scripts]
scapy = "scapy.cli:cli"

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
